--- a/PM-Movies/src/assets/stylesheets/components/_header.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_header.scss
@@ -5,7 +5,7 @@ app-header {
 
   #title a {
     color: $accent-color;
-    font-family: krungthep;
+    font-family: $font-title-sans;
     text-decoration: none;
   }
 
