--- a/PM-Movies/src/assets/stylesheets/components/_thumbnail-board.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_thumbnail-board.scss
@@ -3,6 +3,7 @@ app-thumbnail-board {
 
   .sidebar {
     min-width: 5rem;
+    //box-shadow: $shadow-large-3;
 
     &.expanded {
       width: $sidebar-size;
