--- a/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.html
+++ b/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.html
@@ -1,13 +1,5 @@
 <div class="mx-auto d-flex justify-content-between">
-  <div class="h-auto sidebar" [class.expanded]="!filtersPaneHidden">
-    <div (click)="toggleFiltersPane()" class=" px-4 filters-pan d-flex justify-content-between align-items-center">
-      <img src="/assets/icons/filter.svg" alt="" />
-      <img *ngIf="!filtersPaneHidden" src="/assets/icons/close.svg" alt="Close filter panel" />
-    </div>
-
-    <app-content-filters-panel (updateFilter)="onUpdateFilter($event)" [hidden]="filtersPaneHidden">
-    </app-content-filters-panel>
-  </div>
+  <app-content-filters-panel (updateFilter)="onUpdateFilter($event)" [hidden]="filtersPaneHidden"></app-content-filters-panel>
 
   <div class="d-flex flex-wrap justify-content-start w-100">
     <div *ngFor="let content of contents| slice:0:10">
