--- a/PM-Movies/src/app/components/header/header.component.html
+++ b/PM-Movies/src/app/components/header/header.component.html
@@ -1,10 +1,9 @@
-<header class="d-flex justify-content-between">
-  <div class="d-flex h-100">
-    <img routerLink="/" src="/assets/icons/logo.svg" alt="logo" class="px-4" />
-    <h1 id="title" class="my-auto">
+<header>
+  <div class="header-title">
+    <img routerLink="/" src="/assets/icons/logo.svg" alt="logo" class="header-title-logo" />
+    <h1 id="title" class="header-title-text">
       <a routerLink="/">The Perfect Movie</a>
     </h1>
   </div>
-
   <app-search-bar></app-search-bar>
 </header>
