--- a/PM-Movies/src/app/components/app/app.component.scss
+++ b/PM-Movies/src/app/components/app/app.component.scss
@@ -1,3 +1,9 @@
+.app-root-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .footer{
   display: flex;
   align-items: center;
