--- a/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.scss
+++ b/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.scss
@@ -1,29 +1,31 @@
-.card {
-  position: relative;
+.content-thumbnail {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-  &:hover .card-body{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-  }
+.card:hover .card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .content-title {
-  position: absolute;
-  bottom: 0;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-end;
-}
-
-img {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  position: absolute;
+  bottom: 0;
+
+  p {
+    width: 100%;
+  }
 }
 
-p {
-  text-align: center;
+.action-bar{
+  display: flex;
+  justify-content: space-around;
 }
