--- a/PM-Movies/src/app/components/header/header.component.scss
+++ b/PM-Movies/src/app/components/header/header.component.scss
@@ -1,14 +1,11 @@
 header {
-  position: fixed;
-  width: 100%;
-  height: 4rem;
-  min-height: 3rem;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  z-index: 10;
+  width: 100%;
+}
 
-  div{
-    width: 20rem;
-  }
+.header-title{
+  display: flex;
+  height: 100%;
 }
