--- a/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
@@ -1,12 +1,13 @@
 app-content-thumbnail {
   .card {
+    position: relative;
     margin-top: $spacing-medium;
     margin-left: $spacing-xxlarge;
     margin-right: $spacing-xxlarge;
     width: $card-size;
     height: $card-size;
-    box-shadow: 1rem 1rem 0.5rem rgba(0, 0, 0, 0.2);
-    border-radius: 0 1rem 0.5rem 0.5rem;
+    box-shadow: $shadow-medium-3;
+    border-radius: $card-top-left-border-radius $card-top-right-border-radius $card-bottom-left-border-radius $card-bottom-right-border-radius;
   }
 
   .card-body {
@@ -14,7 +15,7 @@ app-content-thumbnail {
     display: none;
     height: 80%;
     width: 100%;
-    background : linear-gradient(0deg, rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 1) 34%);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 100%, rgba(0, 0, 0, 1) 34%);
     font-family: "Fira Sans", sans-serif;
     font-size: $size-medium;
     color: $contrast-color;
@@ -22,7 +23,7 @@ app-content-thumbnail {
     padding-bottom: $spacing-medium;
     cursor: pointer;
 
-    p{
+    p {
       font-size: $size-small;
       text-align: left;
       padding: $spacing-medium;
@@ -47,6 +48,7 @@ app-content-thumbnail {
 
     p {
       margin-bottom: $spacing-medium;
+      text-align: left;
     }
   }
 
@@ -76,18 +78,23 @@ app-content-thumbnail {
     }
   }
 
-  .btn{
+  img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .btn {
     padding-top: $spacing-tiny;
     padding-bottom: $spacing-tiny;
     padding-left: $spacing-small;
     padding-right: $spacing-small;
 
-
-    &:focus{
-      box-shadow: 0 0 0 0.2rem rgba($accent-color,.5);
+    &:focus {
+      box-shadow: 0 0 0 0.2rem rgba($accent-color, 0.5);
     }
 
-    &:hover{
+    &:hover {
       background-color: $accent-color;
       border-color: $accent-color;
     }
@@ -107,5 +114,9 @@ app-content-thumbnail {
 
   .content-year {
     padding: $spacing-medium;
+  }
+
+  .content-year-val{
+    font-weight: $weight-bold;
   }
 }
