--- a/PM-Movies/src/assets/stylesheets/components/_content-filters-panel.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-filters-panel.scss
@@ -10,7 +10,7 @@ app-content-filters-panel {
   }
 
   .filters-panel-fixed-container {
-    top: 6rem;
+    top: $margin-to-header;
     position: fixed;
   }
 
