--- a/PM-Movies/src/assets/stylesheets/variables/_sizes.scss
+++ b/PM-Movies/src/assets/stylesheets/variables/_sizes.scss
@@ -28,8 +28,11 @@ $breakpoints: (
 ) !default;
 
 //Sidebar width
-$sidebar-size: 18rem;
+$sidebar-size: 22rem;
 $sidebar-collapsed-size: 5rem;
 
 //Cards width
 $card-size: 18rem;
+
+//Header height
+$header-height: 5rem;
