--- a/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.html
+++ b/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.html
@@ -1,9 +1,10 @@
 <div class="thumbnail-board-container">
   <app-content-filters-panel (updateFilter)="onUpdateFilter($event)"></app-content-filters-panel>
 
-  <div class="thumbnail-board-thumbnails">
+  <div class="thumbnail-board-thumbnails" [class.empty]="!contents.length">
     <div *ngFor="let content of contents | slice:0:10">
       <app-content-thumbnail *ngIf="content.visible" [content]="content"></app-content-thumbnail>
     </div>
+    <p *ngIf="!contents.length" class="thumbnail-board-empty-msg">No content to display</p>
   </div>
 </div>
