--- a/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.scss
+++ b/PM-Movies/src/app/components/thumbnail-board/thumbnail-board.component.scss
@@ -8,4 +8,13 @@
   flex-wrap: wrap;
   justify-content: flex-start;
   width: 100%;
+
+  &.empty{
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+.thumbnail-board-empty-msg{
+  width: 100%;
 }
