--- a/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_content-thumbnail.scss
@@ -1,7 +1,7 @@
 app-content-thumbnail {
   .card {
     position: relative;
-    margin-top: $spacing-medium;
+    margin-bottom: $spacing-medium;
     margin-left: $spacing-xxlarge;
     margin-right: $spacing-xxlarge;
     width: $card-size;
@@ -91,12 +91,18 @@ app-content-thumbnail {
     padding-right: $spacing-small;
 
     &:focus {
-      box-shadow: 0 0 0 0.2rem rgba($accent-color, 0.5);
+      box-shadow: none;
     }
 
     &:hover {
-      background-color: $accent-color;
+      background-color: darken($accent-color,5);
+      border-color: darken($accent-color,5);
+    }
+
+    &:not(:disabled):not(.disabled):active, &:not(:disabled):not(.disabled):focus:active{
+      background-color: darken($accent-color,5);
       border-color: $accent-color;
+      box-shadow: 0 0 0 0.2rem $accent-color;
     }
   }
 
@@ -108,8 +114,13 @@ app-content-thumbnail {
 
   .btn-outline-primary {
     color: $contrast-color;
-    background-color: none;
+    background: none;
     border-color: $accent-color;
+
+    &:hover {
+      background: none;
+      border-color: $accent-color;
+    }
   }
 
   .content-year {
