--- a/PM-Movies/src/assets/stylesheets/components/_header.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_header.scss
@@ -2,16 +2,16 @@ app-header {
   header {
     position: fixed;
     background-color: $accent-bg-color;
-    height: 4rem;
-    min-height: 3rem;
+    height: $header-height;
     z-index: 10;
   }
 
-  .header-tiltle{
+  .header-title{
     width: 20rem;
+    width: 50%;
   }
 
-  .header-tiltle-logo{
+  .header-title-logo{
     padding-left: $spacing-large;
     padding-right: $spacing-large;
   }
@@ -19,6 +19,7 @@ app-header {
   .header-title-text{
     margin-top: auto;
     margin-bottom: auto;
+    font-size: $size-large;
 
     a {
       color: $accent-color;
@@ -32,20 +33,8 @@ app-header {
     object-fit: contain;
   }
 
-  @media (min-width: map-get($breakpoints, 'large')) {
-    h1#title {
-      font-size: $size-medium;
-    }
-  }
-
-  @media (min-width: map-get($breakpoints, 'medium')) {
-    h1#title {
-      font-size: $size-small;
-    }
-  }
-
   @media (max-width: map-get($breakpoints, 'small')) {
-    h1#title {
+    .header-title-text {
       display: none;
     }
   }
