--- a/PM-Movies/src/app/components/header/header.component.html
+++ b/PM-Movies/src/app/components/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="header-title">
     <img routerLink="/" src="/assets/icons/logo.svg" alt="logo" class="header-title-logo" />
     <h1 id="title" class="header-title-text">
-      <a routerLink="/">The Perfect Movie</a>
+      <a class="header-title-link" routerLink="/">The Perfect Movie</a>
     </h1>
   </div>
   <app-search-bar></app-search-bar>
