--- a/PM-Movies/src/app/components/app/app.component.scss
+++ b/PM-Movies/src/app/components/app/app.component.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
 }
 
-.footer{
+.app-footer{
   display: flex;
   align-items: center;
   justify-content: center;
