--- a/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.html
+++ b/PM-Movies/src/app/components/content-thumbnail/content-thumbnail.component.html
@@ -1,23 +1,17 @@
 <div class="content-thumbnail">
   <div class="card">
     <div class="card-img-top">
-      <img src="{{ content.posterUrl || '' }}" alt="Content poster unavailable" />
-      <div class="content-title">
-        <p>{{ content.title }}</p>
-      </div>
+      <img class="content-poster" src="{{ content.posterUrl || '' }}" alt="Content poster unavailable" />
+      <p class="content-title">{{ content.title }}</p>
     </div>
     <div class="card-body" routerLink="/detail/{{content.type}}/{{content.tmdbId}}">
-      <p>{{ content.overview | slice:0:250 }}...</p>
+      <p class="content-overview">{{ content.overview | slice:0:250 }}...</p>
       <div class="action-bar">
-        <button type="button" [class.btn-primary]="content.toWatch"
-          [class.btn-outline-primary]="!content.toWatch"
-          class="btn" [class.enabled]="content.toWatch" (click)="toggleWatchList($event)"
-          >A voir
+        <button type="button" [class.btn-primary]="content.toWatch" [class.btn-outline-primary]="!content.toWatch"
+          class="btn" [class.enabled]="content.toWatch" (click)="toggleWatchList($event)">A voir
         </button>
-        <button type="button" [class.btn-primary]="content.watched"
-          [class.btn-outline-primary]="!content.watched"
-          class="btn" [class.enabled]="content.watched" (click)="addToWatchedContents($event)"
-          >Déja vu
+        <button type="button" [class.btn-primary]="content.watched" [class.btn-outline-primary]="!content.watched"
+          class="btn" [class.enabled]="content.watched" (click)="addToWatchedContents($event)">Déja vu
         </button>
       </div>
     </div>
