--- a/PM-Movies/src/app/components/search-bar/search-bar.component.html
+++ b/PM-Movies/src/app/components/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
 <div class="search-area">
-  <img src="/assets/icons/search.svg" alt="search-icon" />
-  <input #searchQuery type="search" placeholder="Search" (input)="onSearchUpdate(searchQuery.value)" />
+  <img class="search-bar-icon" src="/assets/icons/search.svg" alt="search-icon" />
+  <input class="search-bar-input" #searchQuery type="search" placeholder="Search"
+  (input)="onSearchUpdate(searchQuery.value)" />
 </div>
