--- a/PM-Movies/src/assets/stylesheets/components/_header.scss
+++ b/PM-Movies/src/assets/stylesheets/components/_header.scss
@@ -1,4 +1,5 @@
 app-header {
+
   header {
     position: fixed;
     background-color: $accent-bg-color;
@@ -14,23 +15,20 @@ app-header {
   .header-title-logo{
     padding-left: $spacing-large;
     padding-right: $spacing-large;
+    height: 100%;
+    object-fit: contain;
   }
 
   .header-title-text{
     margin-top: auto;
     margin-bottom: auto;
     font-size: $size-large;
-
-    a {
-      color: $accent-color;
-      font-family: $font-title-sans;
-      text-decoration: none;
-    }
   }
 
-  img[alt="logo"] {
-    height: 100%;
-    object-fit: contain;
+  .header-title-link {
+    color: $accent-color;
+    font-family: $font-title-sans;
+    text-decoration: none;
   }
 
   @media (max-width: map-get($breakpoints, 'small')) {
